# nt-research

./: .gitignore  README.md  pyproject.toml  testing.py
nt_research/: kalshi.py
nt_research/datasets/: settled_cfb_markets.py  settled_cfb_markets_daily.py
nt_research/research/merger_arbitrage/: backtest.py  calibration.py  experiment_1.py  experiment_2.py  experiment_3.py  performance.py  regression.py
nt_research/research/merger_arbitrage/results/experiment_3/: performance_table_t=-30.txt
nt_research/research/underdog_risk_premium/: data_utils.py  experiment_1.py  experiment_2.py  experiment_3.py  experiment_4.py  paper.typ  underdog_risk_premium.typ
nt_research/research/underdog_risk_premium/results/experiment_1/: calibration_table_t=-30.txt
nt_research/utils/: database.py
