[project]
name = "nt-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "connectorx>=0.4.4",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
]
