[project]
name = "nt-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "connectorx>=0.4.4",
    "great-tables>=0.18.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "selenium>=4.36.0",
    "sqlalchemy>=2.0.43",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "rich>=14.1.0",
]
